fix add pattern button being too wide

--- a/src/components/pages/Song.css
+++ b/src/components/pages/Song.css
@@ -1,4 +1,5 @@
 .Song {
+  align-items: center;
   display: flex;
   flex-direction: column;
 }
